gitignore mv up

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+*/node_modules
 /.pnp
 .pnp.js
-
+/.vs
 # testing
 /coverage
 
@@ -24,3 +24,7 @@ yarn-error.log*
 
 #firebasewebapi
 .env
+
+*/bin
+
+*/obj
